Add about section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <head><title>My Git Project</title></head>
+    <head><title>My Git Project10</title></head>
     <body>
         <h1>Hello, Git!</h1>
     </body>
